# kelvin-rest-api-client

./: .bandit  .black  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  allurerc.js  branch_tests.cfg  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: code_linting.yml  integration_tests.yml  python_package.yml  pythonpackage.yml
.gitlab-ci/: Dockerfile.pre-commit  branch_tests.cfg  gitlab-ci.yml  parse_junit.py  prepare_test_vm.sh
docker/: common.sh  start_kelvin_container
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  ucsschool.kelvin.client.base.rst  ucsschool.kelvin.client.exceptions.rst  ucsschool.kelvin.client.role.rst  ucsschool.kelvin.client.rst  ucsschool.kelvin.client.school.rst  ucsschool.kelvin.client.school_class.rst  ucsschool.kelvin.client.session.rst  ucsschool.kelvin.client.status.rst  ucsschool.kelvin.client.user.rst  ucsschool.kelvin.client.workgroup.rst  ucsschool.kelvin.rst  ucsschool.rst  usage-auth.rst  usage-correlation.rst  usage-language.rst  usage-role.rst  usage-school-class.rst  usage-school.rst  usage-status.rst  usage-users.rst  usage-workgroups.rst  usage.rst
tests/: conftest.py  test_init.py  test_kelvin_object_init.py  test_logger.py  test_retry.py  test_role.py  test_school.py  test_school_class.py  test_session.py  test_test.py  test_user.py  test_workgroup.py
ucsschool/kelvin/client/: __init__.py  base.py  exceptions.py  role.py  school.py  school_class.py  session.py  status.py  user.py  workgroup.py
