[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kelvin-rest-api-client"
dynamic = ["version"]
description = "Python library to interact with the UCS@school Kelvin REST API."
readme = "README.rst"
authors = [
    { name = "Daniel Troeder", email = "troeder@univention.de" }
]
license = { text = "GNU Affero General Public License v3" }
keywords = ["Univention", "UCS", "UCS@school", "REST"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
]
requires-python = ">=3.7"
dependencies = [
    "async-property>=0.2.1,<0.3.0",
    "httpx>=0.23.1",
    "importlib-metadata; python_version < '3.8'",
    "lazy-object-proxy>=1.6.0",
    "pyjwt>=2.0.0,<3.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "argh>=0.26.0,<1.0.0",
    "ruff>=0.1.0",
    "Sphinx>=8.0.0; python_version >= '3.10'",
    "watchdog>=2.0.3",
    "wheel>=0.36.2",
]
test = [
    "coverage>=5.5",
    "docker>=5.0.0",
    "factory_boy>=3.0.0,<=4.0.0",
    "Faker>=8.1.1,<=15.0.0",
    "ldap3>=2.9",
    "pytest>=6.2.3",
    "pytest-asyncio>=0.15.1,<=0.18.0",
    "pytest-mock>=3.7.0",
    "ruamel.yaml>=0.17.4",
    "allure-pytest>=2.15.3",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
license-files = []

[tool.setuptools.dynamic]
version = { file = "VERSION.txt" }

[tool.setuptools.packages.find]
where = ["."]
include = ["ucsschool*"]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101", # allow asserts in tests
]

[tool.ruff.lint.isort]
known-first-party = ["ucsschool"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
